fix: align stack info text

--- a/src/app/modules/portfolio/components/header/header.component.scss
+++ b/src/app/modules/portfolio/components/header/header.component.scss
@@ -31,6 +31,8 @@ header {
     .menu {
         .menu-list {
             display: flex;
+            justify-content: center;
+            align-items: center;
             gap: 1rem;
 
             li {
